# OPS-agent

./: .gitignore  README.md
agent-hub/ops-llm-agent/: pyproject.toml
agent-hub/ops-llm-agent/ops_llm_agent/: main.py  multi_llm.py
agent-hub/ops-mem/: pyproject.toml
agent-hub/ops-mem/ops_mem/: demo_ops_mem_zh.py  main.py  ops.env  ops_memory_zh.py
agent-hub/ops-mem/ops_mem/configs/: ops_memory.yml
agent-hub/ops-mem/ops_mem/local_ops_db/: chroma.sqlite3
agent-hub/ops-miband/: pyproject.toml
agent-hub/ops-miband/ops_miband/: main.py
agent-hub/ops-weather/: pyproject.toml
agent-hub/ops-weather/ops_weather/: main.py
docs/: clean.md  ops-scheduler.md
examples/local_ops_db/: chroma.sqlite3
examples/ops-agent/: clean.sh  ops_agent_dataflow-graph.html  ops_agent_dataflow.yml
examples/ops-agent-asr-tts/: clean.sh  ops_agent_asr_tts_dataflow-graph.html  ops_agent_asr_tts_dataflow.yml
examples/test_llm/: ops_llm_dataflow.yml
node-hub/mock-voice/: pyproject.toml
node-hub/mock-voice/mock_voice/: main.py
node-hub/ops-scheduler/: pyproject.toml
node-hub/ops-scheduler/ops_scheduler/: main.py
node-hub/ops-scheduler/ops_scheduler/handlers/: llm_dialog.py  memory.py  weather.py
node-hub/real-voice/: README.md  pyproject.toml
node-hub/real-voice/real_voice/: main.py
node-hub/real-voice/real_voice/tts_call/: get_wav.py
