[tool.poetry]
name = "mock-voice"
version = "0.3.6"
authors = [
    "Haixuan Xavier Tao <tao.xavier@outlook.com>",
    "Enzo Le Van <dev@enzo-le-van.fr>",
]
description = "Dora mock voice"
license = "MIT License"
homepage = "https://github.com/dora-rs/dora.git"
documentation = "https://github.com/yangrudan/OPS-agent"
readme = "README.md"
packages = [{ include = "mock_voice" }]

[tool.poetry.dependencies]
numpy = "< 2.0.0"
pyarrow = ">= 5.0.0"

[tool.poetry.scripts]
mock-voice = "mock_voice.main:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

#[project]
#readme = "README.md"
