[tool.poetry]
name = "ops-scheduler"
version = "0.0.1"
authors = [
    "Mofa Bot"
]
description = "A user new node template"
license = "MIT License"
homepage = "https://github.com/moxin-org/mofa"
documentation = "https://github.com/moxin-org/mofa/blob/main/README.md"
readme = "README.md"
packages = [{ include = "ops_scheduler" }]

[tool.poetry.dependencies]
pyarrow = ">= 5.0.0"
openai = ">=1.0.0"  # 若使用OpenAI API
transformers = ">=4.30.0"  # 若使用本地LLM

[tool.poetry.scripts]
ops-scheduler = "ops_scheduler.main:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

